# power-vision

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yaml
api/: .env.docker  Dockerfile.api  docker.env  package-lock.json  package.json
api/src/: app.module.ts
api/src/account/: account.controller.ts  account.interface.ts  account.service.ts
api/src/db/: db.service.ts
api/src/device/: device.controller.ts  device.interface.ts  device.service.ts
backend/: alembic.ini  init.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c59e5564ebc_add_battery_status_table.py  1a4f9e7c8707_add_data.py  3f124bde3c55_add_device_table.py  49bd95f4b5a7_update_device.py  50e8ad3b8021_update_accounts.py  5733e2260543_init.py  8682229ce916_init.py  8b238966b387_add_battery_type_table.py  b654b0407a24_add_charging_table.py  dbe7a7d69816_fix_batteryid_typo.py
backend/batter_models/: batter_models.py  main.py  project_logging.py
backend/powervision_models/: main.py  powervision_models.py
backend/tests/: test_batter_models.py
batter_api/: package-lock.json  package.json
batter_api/src/: app.module.ts
batter_api/src/account/: account.controller.ts  create-account.dto.ts
frontend/: .env.docker  Dockerfile.site  index.html  package-lock.json  package.json  scripts.ts  style.css  tsconfig.json
frontend/src/: color_charge.ts  edit_device.ts  formSubmission.ts  helper.ts  main.ts  menu.ts  style.css
