[tool.poetry]
name = "powervision_models"
version = "0.1.0"
description = ""
authors = ["author <mu@email.com>"]
packages = [{include = "powervision_models", from = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.4"
click = "^7.1.2"
alembic = "^1.14.1"
SQLAlchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^8.3.4"

[tool.poetry.scripts]
powervision_models = "powervision_models.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
